[package]
name = "url2audio"
version = "0.2.3"
authors = ["zchira"]
license = "GPL-3.0"
description = "simple-to-use lib for playing audio streams"
homepage = "https://github.com/zchira/url2audio"
repository = "https://github.com/zchira/url2audio"
readme = "README.md"
keywords = ["audio", "streams", "symphonia", "player"]
categories = ["multimedia::audio"]
edition = "2021"

[lib]

[dependencies]
cpal = "0.15.3"
crossbeam-channel = "0.5.13"
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
ureq = "2.9.7"
rubato = "0.12.0"
arrayvec = "0.7.4"
rb = "0.3.2"

[profile.bench]
debug = true

[profile.dev]
opt-level = 1

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
